--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,96 @@
   color: #61dafb;
 }
 
+
+
+.contact-form{
+  width:80%;
+  height: 80vh;
+  background-color: orange;
+  margin: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+form{
+  width:100%;
+  /* background-color: aqua; */
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  padding: 20px;
+  margin: 50px;
+  
+}
+
+form input{
+  height: 20px;
+  margin: 10px;
+  padding: 20px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: end;
+}
+
+form input placeholder{
+  
+  padding: 10px;
+}
+
+button{
+  width: 150PX;
+  height: 56PX;
+  background-color: aqua;
+  border: none;
+  font-size: 18px;
+  margin-left: 11px;
+  cursor: pointer;
+  
+}
+
+.header-section{
+  width: 80%;
+  height: auto;
+  background-color: aquamarine;
+  margin: auto;
+}
+
+.main-card{
+
+  width:80%;
+  height: 400px;
+  background-color: #61dafb;
+  display: flex;
+  margin: auto;
+
+
+}
+
+
+.main-card .first{
+  width:33.3%;
+  height: 400px;
+  background-color: blue;
+
+}
+
+.main-card .second{
+  width: 33.3%;
+  height: 400px;
+  background-color:brown;
+  
+}
+
+
+.main-card .third{
+  width:33.4%;
+  height: 400px;
+  background-color:cyan;
+  
+}
+
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
