--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -46,8 +46,6 @@ body{background-color:gray;}
 
 form{
   width:100%;
-  /* background-color: aqua; */
-  display: flex;
   justify-content: center;
   flex-direction: column;
   padding: 20px;
@@ -83,7 +81,6 @@ button{
 .header-section{
   width: 80%;
   height: auto;
-  /* background-color: aquamarine; */
   margin: auto;
 }
 
@@ -95,22 +92,16 @@ button{
 
   width:80%;
   height: 400px;
-  /* background-color: #61dafb; */
   display: flex;
   margin: auto;
-
-
 }
-
 
 .main-card .first{
   width:33.3%;
   height: 400px;
-  /* background-color: blue; */
   position: relative;
   top:0;
   left: 0;
-
 }
 
 .main-card .first img{
@@ -118,51 +109,181 @@ button{
   height: auto;
 }
 
-
-
 .main-card .first  .up{
-  /* background-color: chartreuse; */
   position: absolute;
   top: 80px;
   left: 150px;
- 
 }
-
 
 .main-card .second{
   width: 33.3%;
   height: 400px;
-  /* background-color:brown; */
   margin-left: 20px;
   margin-right: 20px;
-  
 }
    
-
 .main-card .second img{
   width: 100%;
   height: auto;
- 
-
-}
-
-
-
+} 
 
 .main-card .third{
   width:33.4%;
   height: 400px;
-  /* background-color:cyan; */
-  
 }
 
 
 .main-card .third img{
   width: 100%;
   height: auto;
+} 
+
+
+
+
+*/
+
+*{box-sizing: border-box;
+margin: 0px;
+padding: 0px;}
+
+body{
+  background-color: #61dafb;
+  padding: 0px;
+  margin: 0px;
  
+  
+}
+
+.list_design{
+list-style: none;
+
+padding: 25px;
+margin-bottom: 20px;
+}
+
+
+.list_design_img img{
+
+  width:300px;
+  background-color: black;
 
 }
+
+.list_design_text{
+  
+}
+
+
+
+.spacing ul{
+  padding:0px;
+}
+
+
+
+button{
+  width: 150PX;
+  height: 56PX;
+  background-color: aqua;
+  border: none;
+  font-size: 18px;
+  margin-right: 15px;
+  cursor: pointer;
+  
+}
+
+
+.cover_button{
+  display: flex;
+  justify-content: end;
+  
+}
+
+.button_style{
+  margin-top: 15px;
+  justify-content: center;
+  
+}
+
+
+.primary{
+  background-color:blue;
+}
+
+
+.danger{
+  background-color:red;
+}
+
+.normal{
+  background-color: white;
+  
+}
+
+
+
+.cover{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width:70%;
+  margin:auto;
+  flex-direction: column;
+  
+}
+
+.cover h1{
+  color: #fff;
+  margin-bottom: 20px;
+}
+
+.cover .btn_style{
+  width: 100px;
+  height: 40px;
+  background-color: rgb(33, 25, 40);
+  color:#fff;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+  border-radius: 4px;
+  font-size: 16px;
+}
+
+.cover .btn_style:hover{
+ background-color:crimson;
+}
+
+
+.cover .input_text{
+  /* background-color: brown; */
+  width: 150px;
+  height: 40px;
+  border: 2px solid #000;
+  margin-right: 3px;
+  padding: 10px;
+  border-radius: 4px;
+}
+
+
+.list_center{
+  background-color: black;
+  width:40%;
+  margin: auto;
+  height: auto;
+  padding: 50px;
+  margin-top: 20px;
+
+}
+
+
+.list_center li{
+ list-style: none;
+ color: #fff;
+ padding: 10px 20px 10px 20px;
+
+}
+
+
 
 
 @keyframes App-logo-spin {
